--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
+    "date-fns": "^2.16.1",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-icons": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.1",
